@@ -261,8 +261,8 @@ if (ENABLE_WEBKIT)
 endif (ENABLE_WEBKIT)
 
 if (NOT WIN32)
-    SET( CANTATA_SRCS ${CANTATA_SRCS} dbus/mpris.cpp dbus/dockmanager.cpp dbus/gnomemediakeys.cpp )
-    SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} dbus/mpris.h dbus/dockmanager.h dbus/gnomemediakeys.h )
+    SET( CANTATA_SRCS ${CANTATA_SRCS} dbus/mpris.cpp dbus/gnomemediakeys.cpp )
+    SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} dbus/mpris.h dbus/gnomemediakeys.h )
     if (NOT ENABLE_KDE_SUPPORT)
         SET( CANTATA_SRCS ${CANTATA_SRCS} dbus/notify.cpp)
         SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} dbus/notify.h)
@@ -302,8 +302,6 @@ if(NOT WIN32)
     if (NOT ENABLE_KDE_SUPPORT)
         qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.Notifications.xml)
     endif (NOT ENABLE_KDE_SUPPORT)
-    qt4_add_dbus_interfaces(CANTATA_SRCS dbus/net.launchpad.DockItem.xml )
-    qt4_add_dbus_interfaces(CANTATA_SRCS dbus/net.launchpad.DockManager.xml)
     qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.MediaKeys.xml)
 endif(NOT WIN32)
 
