@@ -31,10 +31,6 @@ ExternalSettings::ExternalSettings(QWidget *p)
 {
     setupUi(this);
     #ifdef Q_OS_WIN
-    mprisLabel->setVisible(false);
-    mpris->setVisible(false);
-    dockManagerLabel->setVisible(false);
-    dockManager->setVisible(false);
     gnomeMediaKeys->setVisible(false);
     gnomeMediaKeysLabel->setVisible(false);
     #endif
@@ -45,8 +41,6 @@ void ExternalSettings::load()
     systemTrayCheckBox->setChecked(Settings::self()->useSystemTray());
     systemTrayPopup->setChecked(Settings::self()->showPopups());
     #ifndef Q_OS_WIN
-    mpris->setChecked(Settings::self()->mpris());
-    dockManager->setChecked(Settings::self()->dockManager());
     gnomeMediaKeys->setChecked(Settings::self()->gnomeMediaKeys());
     #endif
 }
@@ -56,8 +50,6 @@ void ExternalSettings::save()
     Settings::self()->saveUseSystemTray(systemTrayCheckBox->isChecked());
     Settings::self()->saveShowPopups(systemTrayPopup->isChecked());
     #ifndef Q_OS_WIN
-    Settings::self()->saveMpris(mpris->isChecked());
-    Settings::self()->saveDockManager(dockManager->isChecked());
     Settings::self()->saveGnomeMediaKeys(gnomeMediaKeys->isChecked());
     #endif
 }
