@@ -57,48 +57,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="BuddyLabel" name="mprisLabel">
-     <property name="text">
-      <string>Enable basic MPRISv2 interface:</string>
-     </property>
-     <property name="buddy">
-      <cstring>mpris</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="OnOffButton" name="mpris">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0">
-    <widget class="BuddyLabel" name="dockManagerLabel">
-     <property name="text">
-      <string>Use current cover as dock icon:</string>
-     </property>
-     <property name="buddy">
-      <cstring>dockManager</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="OnOffButton" name="dockManager">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
     <widget class="QLabel" name="gnomeMediaKeysLabel">
      <property name="text">
       <string>Support media keys under GNOME/Unity:</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="3" column="1">
     <widget class="OnOffButton" name="gnomeMediaKeys"/>
    </item>
   </layout>
@@ -118,8 +84,7 @@
  <tabstops>
   <tabstop>systemTrayCheckBox</tabstop>
   <tabstop>systemTrayPopup</tabstop>
-  <tabstop>mpris</tabstop>
-  <tabstop>dockManager</tabstop>
+  <tabstop>gnomeMediaKeys</tabstop>
  </tabstops>
  <resources/>
  <connections/>
