@@ -55,6 +55,9 @@
     Active - otherwise no item appears.
 32. Truncate error messages to 150 characters. Set message (up to 500
     characters) as tooltip of message widget.
+33. Remove setting of dockmanager item to current cover. This is better handled
+    by an extrna dockmanager helper script, as per amarok, etc.
+34. Remove option to enable/disable MPRIS interface, and always have enabled.
 
 0.8.3.1
 -------
